# Slice-PRB-Allocation-xApp

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
dummy-data-input-output/: outcome.csv  outcome_cell.csv  outcome_ue.csv
ext/protobuf/: api.grpc.pb.cc  api.pb.h
influxdb-dummy-data/: MeasReport_cell.csv  valid.csv
src/ts_xapp/: .ts_xapp.cpp.swp  CMakeLists.txt  Makefile  ts_xapp.cpp
xapp-descriptor/: config.json  schema.json
